@@ -1,1 +1,9 @@
 # Biblioteca-JavaFX
+
+1.Descargar el SDK de JavaFx
+2.agregar las librerias a eclipse
+3.llamarlas en la clase Main
+4.-Run Configurations
+  -Arguments
+  -VM Arguments
+  -Pegar esta ruta: "--module-path "C:\JavaFX\openjfx-24.0.1_windows-x64_bin-sdk\javafx-sdk-24.0.1\lib" --add-modules javafx.controls,javafx.fxml"
